--- a/cooltix-homework/package.json
+++ b/cooltix-homework/package.json
@@ -5,7 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.4",
     "@nx/next": "16.8.1",
+    "graphql": "^16.8.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
