--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "nx serve cooltix-homework",
     "build": "nx build cooltix-homework"
   },
   "private": true,
