--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - add-styles
+      - add-e2e-tests
   pull_request:
     branches:
       - main
@@ -34,11 +34,11 @@ jobs:
     - name: Install Dependencies
       run: npm ci
 
-    # - name: Setup Playwright
-    #   run: npx playwright install-deps
+    - name: Setup Playwright
+      run: npx playwright install-deps
 
-    # - name: Run E2E Tests
-    #   run: npx nx e2e cooltix-homework-e2e
+    - name: Run E2E Tests
+      run: npm run e2e
 
     - name: Build and Deploy to Vercel
       run: npx vercel --token ${{ secrets.VERCEL_TOKEN }} --prod --yes
